third_party/move/move-compiler-v2/tests/checking-lang-v1/public_packge_visibility.move
module 0x42::M {
    public(package) fun foo() {}
}

script {
    public(package) fun main() {}
}
